# go-yosovss

./: .gitattributes  .golangci.yml  Makefile  README-internal.md  README.md  go.mod  go.sum  rsync-callisto.sh  rsync-callisto2.sh  rsync-callisto3.sh
.github/workflows/: lint.yml  test.yml
communication/: communication  communication.go  communication_gen.go  communication_gen_test.go  communication_test.go  main.go
communication/fake/: basic_party.go  committee_party.go  fake.go  fake_test.go  pedersen_vss_dealer.go  pedersen_vss_dealer_malicious.go  pedersen_vss_party.go  pedersen_vss_protocol_test.go  pedersen_vss_types.go  test_party.go
communication/network/: network.go  network_types.go
curve25519/: curve25519.go  curve25519_gen.go  curve25519_gen_test.go  curve25519_test.go  encryption.go  scalar_polynomial.go  scalar_polynomial_test.go
encoding/: codec.go  codec_test.go
maths_fft/: README.md
msgpack/: msgpack.go
pedersen/: pedersen.go  pedersen_gen.go  pedersen_gen_test.go  pedersen_test.go
primitives/curve25519/: base.py  curve25519.go  curve25519_bench_test.go  curve25519_myref10.go  curve25519_myref10_test.go  curve25519_test.go  curve25519_xy.go  curve25519_xy_bench_test.go  curve25519_xy_test.go  encryption.go  encryption_test.go  gen-matrix_generic.go  matrix_bench_test.go  matrix_common.go  matrix_generic.go  matrix_point_scalar.go  matrix_point_xy_scalar.go  matrix_scalar.go  matrix_test.go  public_key.go  public_key_test.go  symmetric.go  (+4 more)
primitives/curve25519/myref10/: CMakeLists.txt  README.md  build.go  ed25519_ref10.c  myref10.c  myref10.h  myref10.swig
primitives/curve25519/myref10/main/: main.c
primitives/curve25519/myref10/private/: common.h  ed25519_ref10.h  ed25519_ref10_fe_25_5.h  ed25519_ref10_fe_51.h
primitives/curve25519/myref10/ref10/fe_25_5/: base_h.h  base_h.py
primitives/curve25519/myref10/ref10/fe_51/: base_h.h  base_h.py  base_h_128.h  base_h_128.py  fe.h
primitives/vss/paritycpp/: CMakeLists.txt  README.md  algebra.hpp  build.go  parity.cpp  parity.h  parity_go.cpp  parity_go.h  paritycpp.swigcxx
(+126 files in other folders)
